# AstroMind

./: .gitignore  README.md  docker-compose.yml  package-lock.json  promt.txt  run_dev.py
.cursor/rules/: projectrules.mdc
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/: llm_factory.py  main.py
apps/backend/src/agents/: ceo.py  graph.py  reviewer.py  state.py  worker.py  workers.py
apps/backend/src/db/: client.py  graph_store.py
apps/backend/src/services/: github_client.py  sandbox.py  socket_manager.py
apps/backend/src/storage/: client.py  minio_client.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: NetworkGraph.tsx
apps/web/src/components/dashboard/: AgentInspector.tsx  LandingHero.tsx  Navbar.tsx  PlanTimeline.tsx  SquadPanel.tsx  TerminalPanel.tsx  Viewport.tsx
apps/web/src/components/layout/: CommandPalette.tsx  Sidebar.tsx  TerminalPanel.tsx
apps/web/src/components/ui/: skeleton.tsx
apps/web/src/hooks/: useProjectSocket.ts
apps/web/src/lib/: theme.ts
backend/: settings.py
backend/agents/: ceo.py  developer.py  reviewer.py
backend/api/: projects.py
backend/core/: orchestrator.py
backend/llm/: adapter.py  cache.py  groq_adapter.py  mock_adapter.py  ollama_adapter.py
backend/memory/: utils.py
backend/sandbox/: executor.py
backend/tests/: test_api.py
backend/utils/: fileutils.py  json_parser.py
frontend/src/components/: DAGView.tsx  Editor.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/project/: [id].tsx
(+1 files in other folders)
