[project]
name = "gangai-backend"
version = "0.1.0"
description = "AI Agent Orchestration Backend"
authors = [{name = "Gangai Team", email = "dev@gangai.ai"}]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0", # FIX: Add standard extras for WebSockets
    "websockets>=12.0",          # FIX: Explicitly add websockets
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.0.4",
    "langchain-groq>=0.0.1",      
    "langchain-cohere>=0.0.1",    
    "pymgclient>=1.3.1",
    "neo4j>=5.14.0",
    "minio>=7.2.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "docker>=7.0.0" # Added for Sandbox
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
